--- a/app/app/resources/css/app.css
+++ b/app/app/resources/css/app.css
@@ -1,5 +1,9 @@
 @import 'tailwindcss';
 
+@import "tailwindcss/preflight";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+
 @source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
 @source '../../storage/framework/views/*.php';
 @source '../**/*.blade.php';
